components/q2/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: q2
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: q2
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elq2
  namespace: gazarenk
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-q2
    weight: null
status: {}
